unpackaged/main/default/objects/AcctSeed__GL_Account__c/AcctSeed__GL_Account__c.object-meta.xml
<CustomObject>
    <description>Used to document the general ledger accounts used by the financial suite accounting application. This is a traditional general ledger account.</description>
    <label>General Ledger Account</label>
    <nameField>
        <label>GL Account Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>General Ledger Accounts</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>