unpackaged/main/default/objects/AcctSeed__GL_Account__c/fields/AcctSeed__Active__c.field-meta.xml
<CustomField>
    <fullName>AcctSeed__Active__c</fullName>
    <defaultValue>true</defaultValue>
    <inlineHelpText>Denotes if the GL Account is active. Most filtered lookups to the GL Account object look for an active status.</inlineHelpText>
    <label>Active</label>
    <type>Checkbox</type>
</CustomField>