unpackaged/main/default/objects/AcctSeed__GL_Account__c/fields/AcctSeed__Billing_Description__c.field-meta.xml
<CustomField>
    <fullName>AcctSeed__Billing_Description__c</fullName>
    <inlineHelpText>This is an alternate name for the GL Account when used in Billings to display a more customer Friendly description of the GL Account. This feature only is applicable to Revenue GL Accounts.</inlineHelpText>
    <label>Billing Description</label>
    <length>255</length>
    <type>Text</type>
</CustomField>