unpackaged/main/default/objects/AcctSeed__GL_Account__c/fields/AcctSeed__Expense_Report_Name__c.field-meta.xml
<CustomField>
    <fullName>AcctSeed__Expense_Report_Name__c</fullName>
    <inlineHelpText>Used in expense report entry screen to provide a more user friendly name for a GL Account.</inlineHelpText>
    <label>Expense Report Name</label>
    <length>80</length>
    <type>Text</type>
</CustomField>