unpackaged/main/default/objects/AcctSeed__GL_Account__c/fields/AcctSeed__Mileage_Rate__c.field-meta.xml
<CustomField>
    <fullName>AcctSeed__Mileage_Rate__c</fullName>
    <inlineHelpText>Used for mileage rate for expenses.</inlineHelpText>
    <label>Mileage Rate</label>
    <precision>10</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>