unpackaged/main/default/objects/AcctSeed__GL_Account__c/fields/AcctSeed__Rate_Type__c.field-meta.xml
<CustomField>
    <fullName>AcctSeed__Rate_Type__c</fullName>
    <description>Exchange Rate type to be used in the Foreign Currency Translation process.</description>
    <inlineHelpText>Select the Rate Type from the Exchange Rate to be used in the Foreign Currency Translation process. For example, you may want to select “Current” for certain Balance Sheet GL Accounts, and Monthly Average for certain P&amp;L GL Accounts.</inlineHelpText>
    <label>Rate Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>AcctSeed__Rate_Type</valueSetName>
    </valueSet>
</CustomField>