unpackaged/main/default/objects/AcctSeed__GL_Account__c/fields/AcctSeed__Sub_Type_1__c.field-meta.xml
<CustomField>
    <fullName>AcctSeed__Sub_Type_1__c</fullName>
    <inlineHelpText>Used in conjunction with the Type field to further classify GL Accounts in reports. This pick list is dependent on Type.</inlineHelpText>
    <label>Sub Type 1</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>AcctSeed__Type__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Assets</fullName>
            </value>
            <value>
                <fullName>Cost of Goods Sold</fullName>
            </value>
            <value>
                <fullName>Facilities</fullName>
            </value>
            <value>
                <fullName>Labor</fullName>
            </value>
            <value>
                <fullName>Liabilities</fullName>
            </value>
            <value>
                <fullName>Owners Equity</fullName>
            </value>
            <value>
                <fullName>Product Revenue</fullName>
            </value>
            <value>
                <fullName>Sales &amp; Marketing</fullName>
            </value>
            <value>
                <fullName>Service Revenue</fullName>
            </value>
            <value>
                <fullName>General &amp; Administrative</fullName>
            </value>
            <value>
                <fullName>Other Income</fullName>
            </value>
            <value>
                <fullName>Salaries &amp; Benefits</fullName>
            </value>
            <value>
                <fullName>Legal &amp; Professional</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>