unpackaged/main/default/objects/AcctSeed__GL_Account__c/fields/GL_Number__c.field-meta.xml
<CustomField>
    <fullName>GL_Number__c</fullName>
    <externalId>true</externalId>
    <label>GL Number</label>
    <length>25</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>