unpackaged/main/default/objects/AcctSeed__GL_Account__c/listViews/AcctSeed__All1.listView-meta.xml
<ListView>
    <fullName>AcctSeed__All1</fullName>
    <columns>NAME</columns>
    <columns>GL_Number__c</columns>
    <columns>AcctSeed__Type__c</columns>
    <columns>AcctSeed__Sub_Type_1__c</columns>
    <columns>AcctSeed__Sub_Type_2__c</columns>
    <columns>AcctSeed__Bank__c</columns>
    <columns>AcctSeed__Mileage_Account__c</columns>
    <columns>AcctSeed__Billing_Description__c</columns>
    <columns>AcctSeed__Used_in_Expense_Reports__c</columns>
    <columns>AcctSeed__Active__c</columns>
    <columns>GL_Sort_Order__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <language>en_US</language>
</ListView>