unpackaged/main/default/objects/AcctSeed__GL_Account__c/listViews/AcctSeed__Balance_Sheet.listView-meta.xml
<ListView>
    <fullName>AcctSeed__Balance_Sheet</fullName>
    <columns>NAME</columns>
    <columns>AcctSeed__Type__c</columns>
    <columns>AcctSeed__Sub_Type_1__c</columns>
    <columns>AcctSeed__Sub_Type_2__c</columns>
    <columns>AcctSeed__Bank__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>AcctSeed__Type__c</field>
        <operation>equals</operation>
        <value>Balance Sheet</value>
    </filters>
    <label>Balance Sheet</label>
    <language>en_US</language>
</ListView>