unpackaged/main/default/objects/AcctSeed__GL_Account__c/listViews/AcctSeed__Cash_Flow_Categories.listView-meta.xml
<ListView>
    <fullName>AcctSeed__Cash_Flow_Categories</fullName>
    <columns>NAME</columns>
    <columns>AcctSeed__Type__c</columns>
    <columns>AcctSeed__Sub_Type_1__c</columns>
    <columns>AcctSeed__Sub_Type_2__c</columns>
    <columns>AcctSeed__Bank__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>AcctSeed__Type__c</field>
        <operation>equals</operation>
        <value>Cash Flow</value>
    </filters>
    <label>Cash Flow Categories</label>
</ListView>