unpackaged/main/default/objects/AcctSeed__GL_Account__c/listViews/All1.listView-meta.xml
<ListView>
    <fullName>All1</fullName>
    <columns>NAME</columns>
    <columns>GL_Number__c</columns>
    <columns>AcctSeed__Type__c</columns>
    <columns>AcctSeed__Bank__c</columns>
    <columns>AcctSeed__Active__c</columns>
    <columns>AcctSeed__Sub_Type_1__c</columns>
    <columns>AcctSeed__Sub_Type_2__c</columns>
    <columns>GL_Sort_Order__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>AcctSeed__Type__c</field>
        <operation>equals</operation>
        <value>Balance Sheet</value>
    </filters>
    <label>Balance Sheet Accounts</label>
    <language>en_US</language>
</ListView>