unpackaged/main/default/objects/AcctSeed__GL_Account__c/listViews/All_GL_Account_with_tax.listView-meta.xml
<ListView>
    <fullName>All_GL_Account_with_tax</fullName>
    <columns>NAME</columns>
    <columns>AcctSeed__Active__c</columns>
    <columns>AcctSeed__Bank__c</columns>
    <columns>AcctSeed__Billing_Description__c</columns>
    <columns>AcctSeed__Expense_Report_Name__c</columns>
    <columns>GL_Number__c</columns>
    <columns>GL_Sort_Order__c</columns>
    <columns>AcctSeed__Mileage_Account__c</columns>
    <columns>AcctSeed__Mileage_Rate__c</columns>
    <columns>AcctSeed__Sub_Type_1__c</columns>
    <columns>AcctSeed__Sub_Type_2__c</columns>
    <columns>AcctSeed__Type__c</columns>
    <columns>OWNER.ALIAS</columns>
    <columns>UPDATEDBY_USER</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>NAME</field>
        <operation>contains</operation>
        <value>tax</value>
    </filters>
    <label>All  Tax GL Accounts</label>
    <language>en_US</language>
    <sharedTo>
        <allInternalUsers />
    </sharedTo>
</ListView>