unpackaged/main/default/objects/AcctSeed__GL_Account__c/listViews/P_L.listView-meta.xml
<ListView>
    <fullName>P_L</fullName>
    <columns>NAME</columns>
    <columns>AcctSeed__Type__c</columns>
    <columns>AcctSeed__Sub_Type_1__c</columns>
    <columns>AcctSeed__Sub_Type_2__c</columns>
    <columns>AcctSeed__Active__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>AcctSeed__Type__c</field>
        <operation>equals</operation>
        <value>Revenue,Expense</value>
    </filters>
    <label>revenue and Expenses</label>
    <language>en_US</language>
</ListView>