unpackaged/main/default/objects/AcctSeed__GL_Account__c/listViews/Revenue.listView-meta.xml
<ListView>
    <fullName>Revenue</fullName>
    <columns>NAME</columns>
    <columns>AcctSeed__Type__c</columns>
    <columns>AcctSeed__Sub_Type_1__c</columns>
    <columns>AcctSeed__Sub_Type_2__c</columns>
    <columns>OWNER.ALIAS</columns>
    <columns>CREATED_DATE</columns>
    <columns>AcctSeed__Active__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>AcctSeed__Type__c</field>
        <operation>equals</operation>
        <value>Revenue</value>
    </filters>
    <label>Revenue</label>
</ListView>